syntax = "proto3";

option go_package = "client/proto";

message Message {
  string id = 1;
  string sender = 2;
  string content = 3;
  int64 timestamp = 4;
}

message ChatRequest {
  string room_id = 1;
}

message ChatResponse {
  Message message = 1;
}